[package]
name = "rs-flow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
thiserror = "1"
log = "0.4"
chrono = "0.4"
async-trait = "0.1"

[dependencies.futures]
version = "0.3"
features = ["async-await"]

[dependencies.tokio]
version = "1"
features = ["rt", "time", "macros", "sync"]

[dependencies.uuid]
version = "0.8"
features = ["v4"]
